--- a/themes/zephyr/front-end/src/components/component-hero-home/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-home/style.scss
@@ -14,6 +14,7 @@ section.component-hero {
         width: size(250);
         height: size(250);
         background: #B9F5E6;
+        z-index: -1;
         animation: morph 25s linear infinite alternate, moveX 15s ease-in-out infinite alternate-reverse, moveY 10s ease-in-out infinite alternate;
         @include min-x-small-screen {
             right: -35%;
