process animations DONE
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/components/component-hero-home/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-home/style.scss
@@ -13,8 +13,8 @@ section.component-hero {
         right: 8%;
         width: size(250);
         height: size(250);
-        background: #B9F5E6;
-        animation: morph 25s linear infinite alternate, moveX 15s ease-in-out infinite alternate-reverse, moveY 10s ease-in-out infinite alternate;
+        background: #b9f5e6;
+        animation: morph 25s linear infinite alternate, moveX 25s ease-in-out infinite alternate-reverse, moveY 15s ease-in-out infinite alternate;
         @include min-x-small-screen {
             right: -35%;
         }
