--- a/themes/zephyr/front-end/src/components/component-our-process/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-process/style.scss
@@ -46,7 +46,8 @@ section.component-our-process {
     .shape {
         position: absolute;
         z-index: -1;
-        
+        transition: none !important;
+    
         &.aqua {
             max-width: size(118);
             min-height: size(118);
@@ -137,12 +138,13 @@ section.component-our-process {
             min-height: size(180);
             right: size(10);
             bottom: size(-70);
-            
+            z-index: 4;
+    
             img {
                 width: 100%;
                 height: 100%;
             }
-            
+    
             @include x-large-screen {
                 max-width: size(200);
                 min-height: size(200);
