--- a/themes/zephyr/template-parts/blocks/component-our-process/style.css
+++ b/themes/zephyr/template-parts/blocks/component-our-process/style.css
@@ -1,4 +1,180 @@
-section.component-our-process{min-height:50rem;display:flex;align-items:center;position:relative;z-index:3;margin-top:25rem}@media screen and (min-width: 576px){section.component-our-process{margin-top:15rem}}@media screen and (min-width: 1024px){section.component-our-process{margin-top:26.6rem}}section.component-our-process .content .headline-5{color:var(--zephyr-gray);justify-content:center}section.component-our-process .content .headline-1{color:var(--zephyr-gray);justify-content:center;margin:0 auto;max-width:32rem}@media screen and (min-width: 400px){section.component-our-process .content .headline-1{max-width:50rem}}@media screen and (min-width: 576px){section.component-our-process .content .headline-1{line-height:6rem;max-width:100%}}@media screen and (min-width: 768px){section.component-our-process .content .headline-1{font-size:4.5rem;letter-spacing:.05rem;max-width:90rem;margin:2.3rem auto 0}}section.component-our-process .shape{position:absolute;z-index:-1}section.component-our-process .shape.aqua{max-width:11.8rem;min-height:11.8rem;right:10%;top:-14rem}@media screen and (min-width: 1024px){section.component-our-process .shape.aqua{max-width:9rem;min-height:9rem;top:-4.3rem}section.component-our-process .shape.aqua circle{fill:#6be3a8}}section.component-our-process .shape.orange{max-width:9rem;min-height:9rem;left:0;transform:translateX(-50%);bottom:-2.9rem}@media screen and (min-width: 1024px){section.component-our-process .shape.orange{left:unset;right:6.4rem;transform:translateX(0);z-index:3;bottom:5rem}}section.component-our-process .shape.pill{max-width:8.1rem;min-height:6rem;top:50%;transform:translateY(-50%);right:0}@media screen and (min-width: 1024px){section.component-our-process .shape.pill{top:17rem;transform:translateY(0);z-index:4}}section.component-our-process .shape.big-aqua{max-width:18.1rem;min-height:18.1rem;right:-1rem;bottom:-9rem}@media screen and (min-width: 1024px){section.component-our-process .shape.big-aqua{max-width:19.5rem;min-height:19.5rem;right:unset;left:5.3rem;top:50%;transform:translateY(-50%)}section.component-our-process .shape.big-aqua circle{fill:#c7e4d8}}section.component-our-process .shape.hand{max-width:25rem;min-height:21.5rem;left:0;top:-9rem}section.component-our-process .shape.hand img{width:100%;height:100%}@media screen and (min-width: 1024px){section.component-our-process .shape.hand{max-width:50.5rem;min-height:21.5rem;top:-10rem}}section.component-our-process .shape.lines{max-width:18rem;min-height:18rem;right:1rem;bottom:-7rem}section.component-our-process .shape.lines img{width:100%;height:100%}@media screen and (min-width: 1024px){section.component-our-process .shape.lines{max-width:20rem;min-height:20rem;top:20rem;right:-5rem}}
+section.component-our-process {
+    min-height: 50rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 3;
+    margin-top: 25rem
+}
+
+@media screen and (min-width: 576px) {
+    section.component-our-process {
+        margin-top: 15rem
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process {
+        margin-top: 26.6rem
+    }
+}
+
+section.component-our-process .content .headline-5 {
+    color: var(--zephyr-gray);
+    justify-content: center
+}
+
+section.component-our-process .content .headline-1 {
+    color: var(--zephyr-gray);
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 32rem
+}
+
+@media screen and (min-width: 400px) {
+    section.component-our-process .content .headline-1 {
+        max-width: 50rem
+    }
+}
+
+@media screen and (min-width: 576px) {
+    section.component-our-process .content .headline-1 {
+        line-height: 6rem;
+        max-width: 100%
+    }
+}
+
+@media screen and (min-width: 768px) {
+    section.component-our-process .content .headline-1 {
+        font-size: 4.5rem;
+        letter-spacing: .05rem;
+        max-width: 90rem;
+        margin: 2.3rem auto 0
+    }
+}
+
+section.component-our-process .shape {
+    position: absolute;
+    z-index: -1;
+    transition: none !important
+}
+
+section.component-our-process .shape.aqua {
+    max-width: 11.8rem;
+    min-height: 11.8rem;
+    right: 10%;
+    top: -14rem
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process .shape.aqua {
+        max-width: 9rem;
+        min-height: 9rem;
+        top: -4.3rem
+    }
+    
+    section.component-our-process .shape.aqua circle {
+        fill: #6be3a8
+    }
+}
+
+section.component-our-process .shape.orange {
+    max-width: 9rem;
+    min-height: 9rem;
+    left: 0;
+    transform: translateX(-50%);
+    bottom: -2.9rem
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process .shape.orange {
+        left: unset;
+        right: 6.4rem;
+        transform: translateX(0);
+        z-index: 3;
+        bottom: 5rem
+    }
+}
+
+section.component-our-process .shape.pill {
+    max-width: 8.1rem;
+    min-height: 6rem;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process .shape.pill {
+        top: 17rem;
+        transform: translateY(0);
+        z-index: 4
+    }
+}
+
+section.component-our-process .shape.big-aqua {
+    max-width: 18.1rem;
+    min-height: 18.1rem;
+    right: -1rem;
+    bottom: -9rem
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process .shape.big-aqua {
+        max-width: 19.5rem;
+        min-height: 19.5rem;
+        right: unset;
+        left: 5.3rem;
+        top: 50%;
+        transform: translateY(-50%)
+    }
+    
+    section.component-our-process .shape.big-aqua circle {
+        fill: #c7e4d8
+    }
+}
+
+section.component-our-process .shape.hand {
+    max-width: 25rem;
+    min-height: 21.5rem;
+    left: 0;
+    top: -9rem
+}
+
+section.component-our-process .shape.hand img {
+    width: 100%;
+    height: 100%
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process .shape.hand {
+        max-width: 50.5rem;
+        min-height: 21.5rem;
+        top: -10rem
+    }
+}
+
+section.component-our-process .shape.lines {
+    max-width: 18rem;
+    min-height: 18rem;
+    right: 1rem;
+    bottom: -7rem;
+    z-index: 4
+}
+
+section.component-our-process .shape.lines img {
+    width: 100%;
+    height: 100%
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-our-process .shape.lines {
+        max-width: 20rem;
+        min-height: 20rem;
+        top: 20rem;
+        right: -5rem
+    }
+}
 
 
 /*# sourceMappingURL=style.css.map*/
