home hero animations DONE
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/components/component-hero-home/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-home/style.scss
@@ -217,7 +217,8 @@ section.component-hero {
             display: block;
             position: absolute;
             z-index: -1;
-            
+            transition: none !important;
+    
             &.orange-circle {
                 top: size(109);
                 left: 1%;
