--- a/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
@@ -60,7 +60,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            left: -2px;
+            left: 0;
             top: 0;
             z-index: 6;
             background-color: #ff9b78;
@@ -128,7 +128,7 @@
             @include min-medium-screen {
                 margin-top: size(50);
                 flex-direction: row;
-                justify-content: space-between;
+                justify-content: start;
                 @include marginX(0);
             }
             
