--- a/themes/zephyr/template-parts/blocks/component-hero-home/style.css
+++ b/themes/zephyr/template-parts/blocks/component-hero-home/style.css
@@ -6,6 +6,7 @@ section.component-hero {
 }
 
 section.component-hero .test-blob {
+    opacity: 0;
     position: absolute;
     top: 33.3rem;
     right: 8%;
@@ -284,8 +285,146 @@ section.component-hero.no-bg .circle {
     display: block;
     position: absolute;
     z-index: -1;
-    transition: none !important
-}section.component-hero.no-bg .circle.orange-circle{top:10.9rem;left:1%}@media screen and (min-width: 576px){section.component-hero.no-bg .circle.orange-circle{left:10%}}@media screen and (min-width: 1024px){section.component-hero.no-bg .circle.orange-circle{top:15rem;left:25%}}section.component-hero.no-bg .circle.aqua-circle{top:42.6rem;left:-21%}@media screen and (min-width: 400px){section.component-hero.no-bg .circle.aqua-circle{left:-16%}}@media screen and (min-width: 576px){section.component-hero.no-bg .circle.aqua-circle{left:-20%;width:25rem;height:25rem}}@media screen and (min-width: 768px){section.component-hero.no-bg .circle.aqua-circle{top:35rem;left:-15%}}@media screen and (min-width: 1024px){section.component-hero.no-bg .circle.aqua-circle{width:26.7rem;height:26.7rem;top:35.3rem;left:-5%}}section.component-hero.no-bg .circle.dark-circle{max-width:13.9rem;min-height:14.5rem;top:39.1rem;left:-24%}@media screen and (min-width: 400px){section.component-hero.no-bg .circle.dark-circle{left:-18%}}@media screen and (min-width: 576px){section.component-hero.no-bg .circle.dark-circle{max-width:14.5rem;min-height:13.9rem;left:-12%}}@media screen and (min-width: 768px){section.component-hero.no-bg .circle.dark-circle{max-width:16rem;min-height:15.4rem;top:31.5rem;left:-10%}}@media screen and (min-width: 1024px){section.component-hero.no-bg .circle.dark-circle{width:21.7rem;height:22.6rem;top:29.8rem;left:0;transform:translateX(-50%)}}section.component-hero.no-bg .circle.oval{top:40.5rem;display:none;right:-47%}@media screen and (min-width: 400px){section.component-hero.no-bg .circle.oval{right:-35%}}@media screen and (min-width: 576px){section.component-hero.no-bg .circle.oval{max-width:24rem;height:24rem;right:-21%}}@media screen and (min-width: 768px){section.component-hero.no-bg .circle.oval{max-width:28.5rem;height:25.3rem;top:30rem;right:5%}}@media screen and (min-width: 1024px){section.component-hero.no-bg .circle.oval{max-width:28.5rem;height:25.3rem;top:33.3rem;right:8%}}section.component-hero.no-bg .btn{margin-top:50px;color:var(--zephyr-gray);border:1px solid #4b4b4b}
+    transition: none !important;
+    opacity: 0
+}
+
+section.component-hero.no-bg .circle.orange-circle {
+    top: 10.9rem;
+    left: 1%
+}
+
+@media screen and (min-width: 576px) {
+    section.component-hero.no-bg .circle.orange-circle {
+        left: 10%
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-hero.no-bg .circle.orange-circle {
+        top: 15rem;
+        left: 25%
+    }
+}
+
+section.component-hero.no-bg .circle.aqua-circle {
+    top: 42.6rem;
+    left: -21%
+}
+
+@media screen and (min-width: 400px) {
+    section.component-hero.no-bg .circle.aqua-circle {
+        left: -16%
+    }
+}
+
+@media screen and (min-width: 576px) {
+    section.component-hero.no-bg .circle.aqua-circle {
+        left: -20%;
+        width: 25rem;
+        height: 25rem
+    }
+}
+
+@media screen and (min-width: 768px) {
+    section.component-hero.no-bg .circle.aqua-circle {
+        top: 35rem;
+        left: -15%
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-hero.no-bg .circle.aqua-circle {
+        width: 26.7rem;
+        height: 26.7rem;
+        top: 35.3rem;
+        left: -5%
+    }
+}
+
+section.component-hero.no-bg .circle.dark-circle {
+    max-width: 13.9rem;
+    min-height: 14.5rem;
+    top: 39.1rem;
+    left: -24%
+}
+
+@media screen and (min-width: 400px) {
+    section.component-hero.no-bg .circle.dark-circle {
+        left: -18%
+    }
+}
+
+@media screen and (min-width: 576px) {
+    section.component-hero.no-bg .circle.dark-circle {
+        max-width: 14.5rem;
+        min-height: 13.9rem;
+        left: -12%
+    }
+}
+
+@media screen and (min-width: 768px) {
+    section.component-hero.no-bg .circle.dark-circle {
+        max-width: 16rem;
+        min-height: 15.4rem;
+        top: 31.5rem;
+        left: -10%
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-hero.no-bg .circle.dark-circle {
+        width: 21.7rem;
+        height: 22.6rem;
+        top: 29.8rem;
+        left: 0;
+        transform: translateX(-50%)
+    }
+}
+
+section.component-hero.no-bg .circle.oval {
+    top: 40.5rem;
+    display: none;
+    right: -47%
+}
+
+@media screen and (min-width: 400px) {
+    section.component-hero.no-bg .circle.oval {
+        right: -35%
+    }
+}
+
+@media screen and (min-width: 576px) {
+    section.component-hero.no-bg .circle.oval {
+        max-width: 24rem;
+        height: 24rem;
+        right: -21%
+    }
+}
+
+@media screen and (min-width: 768px) {
+    section.component-hero.no-bg .circle.oval {
+        max-width: 28.5rem;
+        height: 25.3rem;
+        top: 30rem;
+        right: 5%
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    section.component-hero.no-bg .circle.oval {
+        max-width: 28.5rem;
+        height: 25.3rem;
+        top: 33.3rem;
+        right: 8%
+    }
+}
+
+section.component-hero.no-bg .btn {
+    margin-top: 50px;
+    color: var(--zephyr-gray);
+    border: 1px solid #4b4b4b
+}
 
 
 /*# sourceMappingURL=style.css.map*/
