--- a/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
@@ -42,6 +42,9 @@
                 padding-right: size(10);
             }
         }
+        @include max-small-screen{
+            display: none;
+        }
         @include min-small-screen{
             margin-bottom: size(100);
         }
@@ -131,6 +134,9 @@
                 justify-content: start;
                 @include marginX(0);
             }
+            @include max-small-screen{
+                flex-direction: row;
+            }
             
             img {
                 margin-bottom: size(12);
@@ -148,16 +154,15 @@
                 @include min-medium-screen {
                     text-align: left;
                 }
-                
+    
                 span {
                     font-family: $Sailec;
                     font-weight: 500;
                     letter-spacing: size(0.17);
-                    display: block;
                     margin-top: size(7);
                     margin-left: 7px;
+                    display: inline;
                     @include min-medium-screen {
-                        display: inline;
                         margin-top: 0;
                     }
                 }
