--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -1175,6 +1175,10 @@ section.component-our-journey .our-journey .our-journey-content .journey-box img
         font-size: 40px;
         text-align: center;
     }
+    .wysiwyg-block{
+        margin-top: 1.5rem;
+        margin-bottom: 0;
+    }
 }
 
 header .header-content .links .has-drop-down {
