--- a/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
+++ b/themes/zephyr/front-end/src/components/component-growth-guide/style.scss
@@ -60,6 +60,7 @@
         overflow: hidden;
     
         .skew-overlay-transition {
+            display: none;
             position: absolute;
             width: 100%;
             height: 100%;
