--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -910,6 +910,8 @@ input, textarea {
     position: relative;
     transition: color 400ms;
     z-index: 5;
+    background: transparent;
+    cursor: pointer;
     
     &::before {
         content: '';
