--- a/themes/zephyr/front-end/src/components/component-hero-home/style.scss
+++ b/themes/zephyr/front-end/src/components/component-hero-home/style.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables";
 @import "src/styles/mixins";
 
-section.component-hero {
+section.component-hero-home {
     min-height: 100vh;
     position: relative;
     display: flex;
