--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -1207,6 +1207,7 @@ header .header-content .links .has-drop-down {
     a.link-arrow {
         display: flex;
         align-items: center;
+        justify-content: center;
         @include max-medium-screen{
             margin-bottom: 0;
         }
