--- a/themes/zephyr/front-end/src/styles/pages/_say-hello.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_say-hello.scss
@@ -25,5 +25,19 @@
             position: relative;
             top: size(-243);
         }
+        //.iv-st-from-top, .iv-st-from-bottom, .iv-st-from-left, .iv-st-from-right, .word-up, .line-up, .real-line-up{
+        //    opacity: 1;
+        //    visibility: visible;
+        //}
+        //.child-word{
+        //    position: relative;
+        //    display: inline-block;
+        //    transform: translate(0px, 0px);
+        //}
+        //.line-overflow, .word-overflow{
+        //    position: relative;
+        //    display: inline-block;
+        //    overflow: visible;
+        //}
     }
 }
