--- a/themes/zephyr/front-end/src/components/component-our-journey/style.scss
+++ b/themes/zephyr/front-end/src/components/component-our-journey/style.scss
@@ -67,7 +67,7 @@ section.component-our-journey {
                 }
             }
             .swiper-control{
-                margin-top: size(57);
+                margin-top: size(15);
                 position: relative;
                 max-width: 90%;
                 @include marginX(auto);
@@ -82,12 +82,15 @@ section.component-our-journey {
                 .swiper-pagination{
                     display: flex;
                     align-items: center;
-                    justify-content: flex-start;
+                    justify-content: center;
                     flex-wrap: wrap;
                     padding: 0 30px;
                     .swiper-pagination-bullet{
                         margin: size(12);
                     }
+                }
+                svg{
+                    display: none;
                 }
                 .swiper-button-next,.swiper-button-prev{
                     position: absolute;
