--- a/themes/zephyr/front-end/src/components/header-component/style.scss
+++ b/themes/zephyr/front-end/src/components/header-component/style.scss
@@ -252,7 +252,7 @@ header {
             }
           }
         }
-        
+       
         .logo.dark {
           display: none !important;
         }
@@ -287,7 +287,7 @@ header {
   .header-content {
     display: flex;
     align-items: center;
-    @include paddingY(size(20));
+    @include paddingY(size(30));
     @include min-small-screen {
       justify-content: space-between;
     }
@@ -307,8 +307,8 @@ header {
         border: none;
         background: transparent;
         cursor: pointer;
-        width: size(28);
-        height: size(20);
+        width: 18px;
+        height: 18px;
         padding: 0;
         
         &:focus {
@@ -317,8 +317,8 @@ header {
         
         span {
           display: block;
-          width: size(28);
-          height: size(2);
+          width: 25px;
+          height: 2px;
           margin-bottom: size(5);
           position: relative;
           z-index: 1;
@@ -412,8 +412,14 @@ header {
     .logo {
       margin: 0 auto;
       z-index: 99;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
       @include min-small-screen {
         margin: 0;
+        position: unset;
+        transform: none;
+        left: auto;
       }
       
       &.dark {
