--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -565,7 +565,7 @@ ol {
     h5{
         margin-bottom: size(10);
         color: #808080;
-        font-family: $Freight;
+        font-family: $Sailec;
         font-size: size(18);
         font-weight: 400;
         font-style: italic;
