make images wrapper opacity:0;
Signed-off-by: ModyydoM <modyydom@gmail.com>

--- a/themes/zephyr/front-end/src/components/component-image-gallery/style.scss
+++ b/themes/zephyr/front-end/src/components/component-image-gallery/style.scss
@@ -26,6 +26,7 @@ section.component-image-gallery {
     }
     
     .image-item-container {
+        opacity: 0;
         width: 100%;
     }
     
