--- a/themes/zephyr/front-end/src/components/component-image-gallery/style.scss
+++ b/themes/zephyr/front-end/src/components/component-image-gallery/style.scss
@@ -111,4 +111,53 @@ section.component-image-gallery {
             margin-top: 0;
         }
     }
+    
+    .video-image {
+        position: relative;
+        height: 0;
+        
+        video {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+        }
+        
+        .play-video {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            cursor: pointer;
+            transition: opacity 400ms;
+            z-index: 99;
+            
+            .pause {
+                display: none;
+            }
+            
+            &.clicked {
+                opacity: 0;
+                pointer-events: none;
+                
+                .pause {
+                    display: block;
+                }
+                
+                .play {
+                    display: none;
+                }
+            }
+        }
+        
+        &:hover {
+            .play-video.clicked {
+                opacity: 1;
+                pointer-events: visible;
+            }
+        }
+        
+    }
 }
